Fix swiping down too much when showing instrument would break game.

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -79,6 +79,10 @@ li {
     border-radius: 3px;
 }
 
+.card * {
+  -webkit-user-drag: none;
+}
+
 .card.left h1 {
   background-color: lightblue;
 }
